# django-poetry-docker-example

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
demoproject/: settings.py  urls.py
