[tool.poetry]
name = "django-poetry-docker-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_poetry_docker_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
psycopg2 = "^2.9.3"
dj-database-url = "^1.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
